@@ -91,8 +91,7 @@ exportMethods(trunc)
 import(float)
 import(methods)
 importFrom(float,float32)
-importFrom(float,scale)
-importFrom(pbdMPI,allreduce)
+importFrom(float,is.float)
 importFrom(pbdMPI,bcast)
 importFrom(pbdMPI,comm.all)
 importFrom(pbdMPI,comm.max)
@@ -104,6 +103,7 @@ importFrom(pbdMPI,irecv)
 importFrom(pbdMPI,isend)
 importFrom(pbdMPI,recv)
 importFrom(pbdMPI,send)
+importFrom(pbdMPI,spmd.allreduce.double)
 importFrom(stats,optim)
 importFrom(stats,prcomp)
 importFrom(stats,runif)
