@@ -62,7 +62,7 @@ cost_svm = function(w, x, y)
   m = nrow(x)
   J.local = 1/m * sum(hinge_loss(1 - DATA(y) * DATA(x) %*% w))
 
-  allreduce(J.local) + 1/m * 0.5 * norm2(w)
+  allreduce_dbl(J.local) + 1/m * 0.5 * norm2(w)
 }
 
 
